# fastapi-whatsapp-agent

./: .gitignore  README.md  main.py  mypy.ini  pyproject.toml
.github/workflows/: deploy.yml
deploy/: docker-compose.yml
docker/: Dockerfile  entrypoint.sh
docs/: Advanced.md  Architecture.md  GettingStarted.md
examples/: auto_reply_bot.py  send_template.py  send_text_pywa copy.py  send_text_pywa.py  simple_send.py
tests/: test_client.py  test_webhook.py
whatsapp_ai/: __init__.py  cli.py  client.py  config.py  exceptions.py  memory.py  models.py  router.py  webhook.py
whatsapp_ai/adapters/: pywa_adapter.py
whatsapp_ai/ai/: base.py  openai_provider.py
