[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whatsapp-ai"
version = "0.1.0"
description = "A modular Python package for WhatsApp Cloud API integration with AI capabilities."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Jules", email = "jules@example.com" }
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "httpx>=0.24.1",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "typer>=0.9.0",
    "tenacity>=8.2.0"
]

[project.scripts]
whatsapp-ai = "whatsapp_ai.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "respx>=0.20.2",
    "mypy>=1.5.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "ruff>=0.0.280"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
target-version = "py310"
